# TouhouGame

./: .gitignore  .gitmodules  CMakeLists.txt  main.c
engine/: render.h  types.h  util.h
engine/ArrayList/: ArrayList.c  ArrayList.h
engine/IO/: io.c  io.h
engine/Render/: render.c  render_init.c  render_internal.h
